--- a/SSM/AmrProject/AmrProject/src/main/resources/Messages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Messages.properties
@@ -1,2 +1,3 @@
 unknown.error={0}\u53D1\u751F\u672A\u77E5\u5F02\u5E38
 logout.success=\u6CE8\u9500\u6210\u529F
+not.authorized=\u5BF9\u4E0D\u8D77,\u4F60\u7684\u6743\u9650\u4E0D\u591F
